--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -1,7 +1,8 @@
 defaults: &defaults
-  host: 127.0.0.1
-  port: 27017
-
+#  host: 127.0.0.1
+#  port: 27017
+  host: 10.15.107.212
+  port: 36038
 development:
   <<: *defaults
   database: tw_development
